<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/mainLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/avo"
        android:text="@string/give_infor"
        android:textColor="@color/black"
        android:textSize="30sp" />


    <!--Input Full Name -->
    <EditText
        android:id="@+id/txt_fullname"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_below="@id/information"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:autofillHints="name"
        android:background="#FFFFFF"
        android:fontFamily="@font/avoitalic"
        android:gravity="center"
        android:hint="@string/input_fullname"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#D3D3D3"
        android:textSize="15sp" />


    <!-- Input   -->

    <EditText
        android:autofillHints="creditCardExpirationYear"
        android:inputType="date"
        android:id="@+id/txt_birth"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/txt_fullname"
        android:background="#FFFFFF"
        android:fontFamily="@font/avoitalic"
        android:gravity="center"
        android:hint="@string/input_birth"
        android:padding="20dp"
        android:textColorHint="#D3D3D3"
        android:textSize="15sp" />

    <!-- Input Email  -->

    <EditText
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:id="@+id/txt_email"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/txt_birth"
        android:background="#FFFFFF"
        android:fontFamily="@font/avoitalic"
        android:gravity="center"
        android:hint="@string/email"
        android:padding="20dp"
        android:textColorHint="#D3D3D3"
        android:textSize="15sp" />

    <!-- Input Adress  -->

    <EditText
        android:inputType="text"
        android:autofillHints="text"
        android:id="@+id/txt_adress"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/txt_email"
        android:background="#FFFFFF"
        android:fontFamily="@font/avoitalic"
        android:gravity="center"
        android:hint="@string/adress"
        android:padding="20dp"
        android:textColorHint="#D3D3D3"
        android:textSize="15sp" />


    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/txt_adress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:backgroundTint="#3FD081"
        android:fontFamily="@font/avo"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <!-- Buttom Go Back -->
    <Button
        android:id="@+id/btn_back"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#BCBCBC"
        android:fontFamily="@font/avo"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="20sp" />


    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="200dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="-5dp"
        android:contentDescription="@string/mainLogo"
        app:srcCompat="@drawable/mainlogo" />


</RelativeLayout>