<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".MainActivity"
    >

    <ImageView
        android:id="@+id/mainLogo"
        android:layout_width="200dp"
        android:layout_height="96dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="-5dp"
        android:contentDescription="@string/homeLogo"
        app:srcCompat="@drawable/mainlogo" />

    <ImageView
        android:id="@id/homeLogo"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_below="@id/mainLogo"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/home"
        android:contentDescription="@string/homeLogo"/>


    <!-- Button Select Login -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/homeLogo"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/main_green"
        android:clickable="false"
        android:fontFamily="@font/avo"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <!-- Button Select Register -->
    <Button
        android:id="@+id/btn_selectregister"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/btn_orther"
        android:fontFamily="@font/avo"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <!-- Button Login With Facebook -->
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btn_facebook"
        android:src="@drawable/facebook"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/btn_selectregister"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/facebook"
        />

    <!-- Button Login With Google -->
    <ImageView
        android:id="@+id/btn_google"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_below="@id/btn_selectregister"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/google"
        android:contentDescription="@string/google"/>


</RelativeLayout>