<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    tools:context=".MainActivity">


    <EditText
        android:autofillHints="phone"
        android:inputType="phone"
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="30dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/avoitalic"
        android:gravity="center"
        android:hint="@string/input_sdt"
        android:padding="20dp"
        android:textSize="20sp"
        android:textColorHint="#D3D3D3"
        />


    <!-- Buttom Login -->
    <Button
        android:id="@+id/loginbtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/main_green"
        android:fontFamily="@font/avo"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <!-- Buttom Go Back -->
    <Button
        android:id="@+id/gobackbtn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@id/loginbtn"
        android:layout_centerInParent="true"
        android:backgroundTint="#BCBCBC"
        android:fontFamily="@font/avo"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="20sp" />

    <ImageView

        android:id="@+id/homeLogo"
        android:layout_width="200dp"
        android:layout_height="96dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_marginEnd="-5dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        app:srcCompat="@drawable/mainlogo"
        android:contentDescription="@string/homeLogo"/>


</RelativeLayout>